--- a/src/styles/main/home.scss
+++ b/src/styles/main/home.scss
@@ -91,6 +91,29 @@ $placeholder-color: rgb(194, 194, 194);
     color: $background-color;
   }
 };
+@mixin infoButton(){
+  cursor: pointer;
+  display: inline-block;
+  background-color: transparent;
+  width: 100% ;
+  height: 40px;
+  border-radius: 6px;
+  border: 1px solid $sub-title;
+  font-family: $classicFont;
+  font-size: 14px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 30px;
+  letter-spacing: normal;
+  text-align: center;
+  color: $sub-title;
+  background-color: $background-color;
+  :hover{
+    $background-color: $sub-title;
+    color: $background-color;
+  }
+};
 @mixin image-title{
   .land-title-img{
     display: inline-block;
@@ -112,6 +135,22 @@ $placeholder-color: rgb(194, 194, 194);
     font-stretch: normal;
     font-style: normal;
     line-height: 24px;
+    letter-spacing: normal;
+    color: $sub-title;
+  }
+  .text-subTitle{
+    $subTitleHeight : 20px;
+    display: inline-block;
+    margin: 9.5px auto !important;
+    width: 100%;
+    height: $subTitleHeight;
+    text-align: center;
+    font-family: $classicFont;
+    font-size: $subTitleHeight;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: $subTitleHeight;
     letter-spacing: normal;
     color: $sub-title;
   }
@@ -442,9 +481,9 @@ input{
           margin: 0 auto !important;
           width: $s-width;
           height: 60px;
-          text-align: left;
+          text-align: center;
           font-family: $classicFont;
-          font-size: 13px;
+          font-size: 16px;
           font-weight: 500;
           font-stretch: normal;
           font-style: normal;
@@ -484,8 +523,8 @@ input{
         }
         .continue{
           margin-top: 15px;
-          width: 60% !important;
-          @include classicButton();
+          width: 100% !important;
+          @include infoButton();
         }
         .label-link-register {
           @include registerLabel();
@@ -499,23 +538,16 @@ input{
         .social-register {
           @include registerField();
         }
+        .main-content{
+          width: 90%;
+          margin: 0 auto;
+        }
 
         .footer-content{
           width: 90%;
           margin: 0 auto;
           margin-top: 12.5px;
-          .footer-title{
-            display: inline-block;
-            width: 100%;
-            line-height: 14px;
-            font-family: $classicFont;
-            font-size: 10px;
-            font-weight: 500;
-            font-stretch: normal;
-            font-style: normal;
-            text-align: center;
-            color: white;
-          }
+          margin-bottom: 12.5px;
           .compe-links-1{
             display: inline-block;
             width: 45%;
